--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,10 @@ repositories {
 publishing {
     repositories {
         maven {
-            url System.getenv("https://mymavenrepo.com/repo/kbBf3VvqAB0F6Ub42WtK/")
+            url System.getenv("url")
             credentials {
-                username System.getenv("myMavenRepo")
-                password System.getenv("563256")
+                username System.getenv("username")
+                password System.getenv("password")
             }
         }
     }
